--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Willkommen zu Deiner KleiderschrankApp"
+        android:id="@+id/welcomeTextView" />
+
 </RelativeLayout>
