Methoden für Button Click in Acitivity Kleiderschrank anlegen, App Theme zurückgesetzt

--- a/app/src/main/res/layout/fragment_kleiderschrank.xml
+++ b/app/src/main/res/layout/fragment_kleiderschrank.xml
@@ -4,14 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="fragments.FragmentKleiderschrank">
-
-    <!--<com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"-->
-    <!--android:id="@+id/plus_one_button"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--plus:annotation="inline"-->
-    <!--plus:size="standard" />-->
+    tools:context=".activities.MainActivity">
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/addKleiderschrankButton"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
