--- a/app/src/main/res/layout/activity_kleiderschrank_anlegen.xml
+++ b/app/src/main/res/layout/activity_kleiderschrank_anlegen.xml
@@ -35,9 +35,10 @@
         android:layout_height="wrap_content"
         android:text="Speichern"
         android:id="@+id/saveButton"
-        android:layout_below="@+id/bezeichnungEditText"
+        android:layout_alignTop="@+id/cancelButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="onClickHandler" />
 
     <Button
         android:layout_width="wrap_content"
@@ -46,6 +47,7 @@
         android:id="@+id/cancelButton"
         android:layout_below="@+id/bezeichnungEditText"
         android:layout_toRightOf="@+id/saveButton"
-        android:layout_toEndOf="@+id/saveButton" />
+        android:layout_toEndOf="@+id/saveButton"
+        android:onClick="onClickHandler" />
 
 </RelativeLayout>
