--- a/app/src/main/res/layout/activity_kleiderschrank_anlegen.xml
+++ b/app/src/main/res/layout/activity_kleiderschrank_anlegen.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gruppe1.kleiderschrankapp.activities.ActivityKleiderschrankAnlegen">
+    tools:context=".activities.KleiderschrankAnlegenActivity">
 
     <TextView
         android:id="@+id/bezeichnungTextView"
