--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/mainActivity">
 
     <LinearLayout
-        android:id="@+id/test"
+        android:id="@+id/verticalscrollfix"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
