--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_white"
-        android:onClick="KleiderschrankAnlegen" />
+        android:onClick="anlegen" />
 
 </android.support.design.widget.CoordinatorLayout>
