--- a/app/src/main/res/layout/fragment_klamotte.xml
+++ b/app/src/main/res/layout/fragment_klamotte.xml
@@ -1,23 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.KlamotteFragment"
+    tools:context=".fragments.KlamotteListFragment"
     android:id="@+id/klamotteFragment">
 
-    <!--<com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"-->
-        <!--android:id="@+id/plus_one_button"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--plus:annotation="inline"-->
-        <!--plus:size="standard" />-->
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/klamotteListView"></ListView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/one"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
-
-</FrameLayout>
+</LinearLayout>
