--- a/app/src/main/res/layout/fragment_kleiderschrank.xml
+++ b/app/src/main/res/layout/fragment_kleiderschrank.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,9 +7,10 @@
     tools:context=".activities.MainActivity"
     android:id="@+id/kleiderschrankFragment">
 
-   <ListView
+   <fragment
+       android:name="com.example.gruppe1.kleiderschrankapp.fragments.KleiderschrankListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:id="@+id/kleiderschrankListView"></ListView>
+       android:id="@+id/kleiderschrankListFragment" />
 
-</RelativeLayout>
+</LinearLayout>
