--- a/app/src/main/res/layout/activity_klamotte_anlegen.xml
+++ b/app/src/main/res/layout/activity_klamotte_anlegen.xml
@@ -22,7 +22,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
+        android:id="@+id/kategorieSpinner"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:text="Tags"
         android:id="@+id/textView2"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/kategorieSpinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -94,5 +94,22 @@
         android:layout_alignBottom="@+id/saveButton"
         android:layout_centerHorizontal="true"
         android:onClick="onClickHandler" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kleiderschrank"
+        android:id="@+id/textView4"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/kleiderschrankSpinner"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
