ListView für KleiderschrankFragment erstellt.

--- a/app/src/main/res/layout/fragment_klamotte.xml
+++ b/app/src/main/res/layout/fragment_klamotte.xml
@@ -1,14 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.KlamotteListFragment"
+    tools:context=".fragments.KlamotteFragment"
     android:id="@+id/klamotteFragment">
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/klamotteListView"></ListView>
+        android:layout_height="wrap_content"
+        android:id="@+id/klamotteListView"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_below="@+id/kategorieSpinner"
+        android:layout_alignParentBottom="true"></ListView>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kleiderschrank"
+        android:id="@+id/textView5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/KleiderschrankSpinner"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kategorie"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/KleiderschrankSpinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/kategorieSpinner"
+        android:layout_below="@+id/KleiderschrankSpinner"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignLeft="@+id/KleiderschrankSpinner"
+        android:layout_alignStart="@+id/KleiderschrankSpinner" />
+
+</RelativeLayout>
