--- a/app/src/main/res/layout/fragment_kleiderschrank.xml
+++ b/app/src/main/res/layout/fragment_kleiderschrank.xml
@@ -7,15 +7,10 @@
     tools:context=".activities.MainActivity"
     android:id="@+id/kleiderschrankFragment">
 
-   <ListView
+    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/kleiderschrankList"
-       android:layout_alignParentTop="true"
-       android:layout_alignParentLeft="true"
-       android:layout_alignParentStart="true"
-       android:layout_alignParentRight="true"
-       android:layout_alignParentEnd="true"
-       android:layout_alignParentBottom="true" />
+       android:text="Kein Inhalt"/>
 
 </LinearLayout>
